# kettle-tdd

./: README.md  pyproject.toml
UML/: kettle_1.puml  kettle_2.puml  kettle_done.puml
kettle/: heater.py  kettle_state.py  light.py  mykettle.py
tests/: test_mykettle.py
