[tool.poetry]
name = "kettle"
version = "0.1.0"
description = ""
authors = ["Tim Ottinger <tottinge@industriallogic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.2.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
matchers = "^0.22"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
